syntax = "proto3";

package greeting;

option java_package = "com.proto.greeting";
option java_multiple_files = true;

message GreetingRequest {
  string first_name = 1;
}

message GreetingResponse {
  string result = 1;
}

service GreetingService {
  rpc greet(GreetingRequest) returns (GreetingResponse);
  rpc greetSStream(GreetingRequest) returns (stream GreetingResponse);
  rpc greetCStream(stream GreetingRequest) returns (GreetingResponse);
  rpc greetBStream(stream GreetingRequest) returns (stream GreetingResponse);

  rpc greetWithDL(GreetingRequest) returns (GreetingResponse);
}
